--- a/src/sassStyles/_variables.scss
+++ b/src/sassStyles/_variables.scss
@@ -16,10 +16,6 @@ $off-white: #FFFDF3;
  * Break-points
  */
 
-$mobile-width: 767px;
-$tablet-width: 768px;
-$desktop-width: 1024px;
-
 $mobile-min-width: 320px;
 $mobile-max-width: 768px;
 $desktop-min-width: 769px;
